# LTM

./: DEMO_GUIDE.md  README.md  run_client.sh  run_server.sh  test_db.sh  test_thread_limit.sh
Client/: CMakeLists.txt
Client/include/: FolderShareDialog.h  mainwindow.h  network_manager.h
Client/src/: FolderShareDialog.cpp  mainwindow.cpp  mainwindow.cpp.backup
Client/src/modules/: network_manager.cpp
Common/: Protocol.h
Server/: CMakeLists.txt
Server/Core/include/: db_config_local.h  db_manager.h  request_handler.h  server.h  server_config.h  thread_manager.h  thread_monitor.h
Server/Core/src/: main.cpp
Server/Core/src/db/: DBManager.cpp
Server/Core/src/handler/: AuthHandler.cpp  CmdHandler.cpp  FileIOHandler.cpp  FolderShareHandler.cpp
Server/Core/src/monitor/: ThreadMonitor.cpp
Server/Core/src/thread/: AcceptThread.cpp  DedicatedThread.cpp  WorkerThread.cpp
Server/storage/: CMakeCache.txt  FileClient  PhamDucNguBinh_20225696_HW4.rar  TCPClient.c  bai1_client.c  cmake_install.cmake  resolver.c
build_client/: CMakeCache.txt  FileClient  Makefile  cmake_install.cmake
build_client/.qt/: QtDeploySupport.cmake
build_client/FileClient_autogen/: deps  mocs_compilation.cpp
build_client/FileClient_autogen/6YEA5652QU/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_network_manager.cpp  moc_network_manager.cpp.d
database/: schema.sql  setup_database.sh
